# violentUTF

./: .bandit  .coveragerc  .flake8  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .license-header.txt  .pre-commit-config-fast.yaml  .pre-commit-config-ultrafast.yaml  .pre-commit-config-version.md  .pre-commit-config.yaml  .pre-commit-config.yaml.backup-20250826-221945  .pylintrc  .secrets.baseline  .secrets.baseline.minimal  .yamllint  API6_setup.md  COMPLETE_SSL_CERTIFICATE_SOLUTION.md  DEVELOPMENT.md  Guide_RedTeaming_GenAIsystems.md  PRODUCTION_SSL_CERTIFICATE_FIX.md  README.md  SETUP_CHECKLIST.md  ai-tokens.env.sample  apisix_clean_restart.sh  bandit-api-results.json  bandit-report-fixed.json  bandit-report.json  bandit-simple.json  bandit-test-results.json  bandit-violentutf-results.json  black_scan_results.txt  check_apisix_routes.sh  check_env_variables.sh  check_fastapi_startup.sh  check_phase2_env_a.sh  check_scorer_auth_issues.py  check_services.sh  check_simple_gsai_routes.sh  (+97 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  epic.yml  (+9 more)
api/: __init__.py
apisix/: .gitattributes  Dockerfile.apisix  README.md  apisix-gateway-auth.lua  check_api_key_config.sh  check_eks_oidc.sh  check_openapi_routes.sh  check_route_details.sh  configure_gateway_auth.py  configure_mcp_routes.sh  configure_orchestrator_routes.sh  configure_routes.sh  configure_routes_template.sh  create_consumer.sh  debug_apisix_route.sh  diagnose_openapi_404.sh  docker-compose.override.yml  docker-compose.yml  docker-compose.yml.fastapi  docker-compose.yml.template  env.sample  fix_openapi_404.sh  fix_openapi_zscaler.sh  fix_orchestrator_executions_route.sh  install_zscaler_certs.sh  remove_routes.sh  startup-wrapper.sh  test_openapi_endpoint.sh  test_regex_rewrite.sh  test_request_flow.sh  trace_error_propagation.sh  update_openapi_auth.sh  verify_configuration.sh  verify_routes.sh
app/: __init__.py
certs/: openssl.cnf
core/: security.py
docker/: debuq.dockerfile
docs/: .gitignore  API_testplan_template.md  COB_Systems_Analysis.md  README.md  Resource_AI_security_privacy.md  SystemModel.sysml  TODO_MASTER.md  ViolentUTF_1_SystemEngineering.md  cybersecurity_28JUL.md  garak_API.md  integration_ViolentUTFapi_KeyCloak.md  pyrit_garak_alignment_analysis.md  sample_Garak_basicpipeline.md  simpleChat_nextgen.md  structure.md  violentutf_Dash.md
keycloak/: README.md  docker-compose.yml  docker-compose.yml.template  env.sample  realm-export.json  setup_macos.sh
knowledge_ai_security_safety/: Making_It_Possible_for_the_Auditing_of_AI-_A_Systematic_Review_of_AI_Audits_and_AI_Auditability_extraction.json  README.md
kong/: POSTGRES_PASSWORD  README.md  docker-compose.yml  temp.md
logs/: subprocess_security.jsonl
models/: memory.py
monitoring/: dataset_monitoring.py
parameters/: default_parameters.yaml
reports/: violentutf_security_report_20250916_114834.html  violentutf_security_report_20250916_114914.html  violentutf_security_report_20250916_115104.html
scripts/: PRECOMMIT_SPEED_GUIDE.md  README.md  README_cleanup_scorer_results.md  README_testing.md  check_api_scorers.py  check_regex_patterns.py  choose_precommit_speed.py  ci_docker_helper.sh  cleanup_dashboard_data.py  cleanup_scorer_results.py  cleanup_scorer_results_simple.py  diagnose_fastapi_route.sh  diagnose_formatting.py  diagnose_openapi_mismatch.sh  final_ci_check.sh  fix_ci_issues.sh  fix_enterprise_import_error.sh  fix_github_actions_yaml.py  fix_openapi_setup.sh  fix_path_spaces.py  fix_regex_patterns.py  fix_shebang_permissions.py  fix_staging_openapi_routes.sh  fix_staging_openapi_routes_v2.sh  force_format_all.sh  generate_dependency_report.py  generate_performance_report.py  inspect_scorer_inconsistencies.py  install_pre_commit_hook.sh  optimize_precommit_performance.py  pre_commit_check.py  precommit_env_check.py  precommit_process_improvement.md  quick_ci_check.sh  quick_endpoint_test.sh  quick_quality_check.sh  reset_openapi_routes.sh  run_code_quality_checks.py  run_tests_windows.py  setup_cob_cron.sh  (+13 more)
setup_linux_files/: ai_providers_setup.sh  apisix_setup.sh  cleanup.sh  docker_setup.sh  env_management.sh  keycloak_setup.sh  logging_utils.sh  route_management.sh  streamlit_setup.sh  utils.sh  validation.sh  violentutf_api_setup.sh
setup_macos_files/: ai_providers_setup.sh  apisix_configure_routes.sh  apisix_setup.sh  certificate_management.sh  cleanup.sh  docker_setup.sh  env_management.sh  keycloak_setup.sh  logging_utils.sh  openapi_setup.sh  pre_download_packages.sh  route_management.sh  ssl_setup.sh  streamlit_setup.sh  utils.sh  validate_https_config.sh  validation.sh  violentutf_api_setup.sh
tests/: .env.test  README.md  __init__.py  bandit-report.json  check_scorer_database_summary.py  check_scorer_database_util.py  conftest.py  debug_dashboard_api.py  debug_dashboard_util.py  issue_122_tests.md  issue_123_tests.md  issue_124_tests.md  issue_125_tests.md  issue_126_tests.md  issue_127_tests.md  issue_128_tests.md  issue_130_tests.md  issue_131_tests.md  issue_132_tests.md  issue_133_tests.md  issue_134_tests.md  issue_238_tests.md  issue_280_tests.md  issue_282_tests.md  issue_283_tests.md  issue_284_tests.md  profile_memory.py  profile_memory_util.py  pytest.ini  requirements-test.txt  requirements.txt  run_enhanced_tests.sh  run_tests.sh  test_all_endpoints.py  test_apisix_integration.py  test_auth_bypass_fix.py  test_authentication_flow.py  test_blocks_direct.py  test_config_tab.py  test_converter_preview.py  (+78 more)
tmp/: openapi_route_modifications.txt
violentutf/: .dockerignore  .env copy  .gitignore  Dockerfile  Home.py  README.md  __init__.py  env.sample  requirements.txt
violentutf_api/: .gitignore  docker-compose.yml  jwt_cli.py
(+899 files in other folders)
